--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@arcjet/next": "1.0.0-beta.7",
     "@clerk/nextjs": "^6.20.0",
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-tabs": "^1.1.12",
     "@repo/cms": "workspace:*",
