--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
     "require-in-the-middle": "^7.5.2",
     "sharp": "^0.34.2",
     "shiki": "^3.4.2",
+    "stripe": "^18.1.1",
     "svix": "^1.66.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.28"
