--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -38,6 +38,8 @@
     "recharts": "^2.15.3",
     "require-in-the-middle": "^7.5.2",
     "sonner": "^2.0.3",
+    "stripe": "^18.1.1",
+    "svix": "^1.66.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
