--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "22.15.21",
     "@types/react": "19.1.5",
     "@types/react-dom": "19.1.5",
