--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,7 @@
   },
   "github": {
     "autoAlias": false
-  }
+  },
+  "buildCommand": "npm install && npm run build",
+  "installCommand": "npm install"
 }
