--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,10 +34,12 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
     "fumadocs-core": "^15.4.0",
+    "gsap": "^3.13.0",
     "import-in-the-middle": "^1.13.2",
     "lucide-react": "^0.511.0",
     "mdx-bundler": "^10.1.1",
     "next": "15.3.2",
+    "ogl": "^1.0.11",
     "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
