--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,8 @@
   "name": "api",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm:next\" \"npm:stripe\"",
+    "dev": "npm run next",
+    "dev:with-stripe": "concurrently \"npm:next\" \"npm:stripe\"",
     "next": "next dev -p 3002 --turbopack",
     "build": "next build",
     "start": "next start",
