--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,7 @@
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@repo/cms": "workspace:*",
+
     "@repo/design-system": "workspace:*",
     "@repo/email": "workspace:*",
     "@repo/feature-flags": "workspace:*",
@@ -28,6 +28,7 @@
     "@repo/rate-limit": "workspace:*",
     "@repo/security": "workspace:*",
     "@repo/seo": "workspace:*",
+    "@sendgrid/mail": "^8.1.5",
     "@sentry/nextjs": "^9.22.0",
     "@t3-oss/env-nextjs": "^0.13.4",
     "clsx": "^2.1.1",
@@ -40,6 +41,7 @@
     "mdx-bundler": "^10.1.1",
     "next": "15.3.2",
     "ogl": "^1.0.11",
+    "openai": "^5.19.1",
     "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
