--- a/packages/payments/package.json
+++ b/packages/payments/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
+    "@repo/database": "workspace:*",
     "@stripe/agent-toolkit": "^0.7.8",
     "@t3-oss/env-nextjs": "^0.13.4",
     "server-only": "^0.0.1",
