--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,6 @@
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-tabs": "^1.1.12",
-
     "@repo/design-system": "workspace:*",
     "@repo/email": "workspace:*",
     "@repo/feature-flags": "workspace:*",
@@ -46,6 +45,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "require-in-the-middle": "^7.5.2",
+    "resend": "^4.5.1",
     "sharp": "^0.34.2",
     "shiki": "^3.4.2",
     "stripe": "^18.1.1",
