--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "@sendgrid/mail": "^8.1.5",
     "@sentry/nextjs": "^9.22.0",
     "@t3-oss/env-nextjs": "^0.13.4",
+    "amadeus": "^11.0.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
@@ -42,7 +43,7 @@
     "mdx-bundler": "^10.1.1",
     "next": "15.3.2",
     "ogl": "^1.0.11",
-    "openai": "^5.19.1",
+    "openai": "^5.20.1",
     "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
