--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,4 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "ignoreCommand": "node scripts/skip-ci.js"
+  "ignoreCommand": "node scripts/skip-ci.js",
+  "buildCommand": "cd ../.. && npm install && npx prisma generate --schema=packages/database/prisma/schema.prisma && cd apps/web && npm run build",
+  "installCommand": "cd ../.. && npm install"
 }
