--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,6 @@
   "github": {
     "autoAlias": false
   },
-  "buildCommand": "npm install && npm run build",
+  "buildCommand": "npm install && npx prisma generate && npm run build",
   "installCommand": "npm install"
 }
