--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001 --turbopack",
-    "build": "npx prisma generate --schema=../../packages/database/prisma/schema.prisma && next build",
-    "build:with-avif": "node scripts/convert-images-avif.js && npm run build",
-    "build:fast": "npm run build",
+    "build": "pnpm prisma generate --schema=../../packages/database/prisma/schema.prisma && next build",
+    "build:with-avif": "node scripts/convert-images-avif.js && pnpm run build",
+    "build:fast": "pnpm run build",
     "start": "next start",
-    "analyze": "ANALYZE=true npm run build",
+    "analyze": "ANALYZE=true pnpm run build",
     "optimize-images": "node scripts/convert-images-avif.js",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
-    "postinstall": "npx prisma generate --schema=../../packages/database/prisma/schema.prisma"
+    "postinstall": "pnpm prisma generate --schema=../../packages/database/prisma/schema.prisma"
   },
   "dependencies": {
     "@arcjet/next": "1.0.0-beta.7",
