--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "boundaries": "turbo boundaries",
     "bump-deps": "npx npm-check-updates --deep -u -x react-day-picker",
     "bump-ui": "npx shadcn@latest add --all --overwrite -c packages/design-system",
-    "migrate": "cd packages/database && npx prisma format && npx prisma generate && npx prisma db push",
+    "migrate": "cd packages/database && pnpm prisma format && pnpm prisma generate && pnpm prisma db push",
     "clean": "git clean -xdf node_modules",
     "install:retry": "pnpm install --frozen-lockfile --network-timeout 300000 || pnpm install --frozen-lockfile --network-timeout 300000 || pnpm install --frozen-lockfile --network-timeout 300000"
   },
