--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,6 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "ignoreCommand": "node scripts/skip-ci.js",
-  "buildCommand": "cd ../.. && pnpm install && pnpm prisma generate --schema=packages/database/prisma/schema.prisma && cd apps/web && pnpm run build",
-  "installCommand": "cd ../.. && pnpm install"
+  "ignoreCommand": "node scripts/skip-ci.js"
 }
