--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,8 @@
     "analyze": "ANALYZE=true pnpm run build",
     "optimize-images": "node scripts/convert-images-avif.js",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "postinstall": "cd ../../packages/database && pnpm prisma generate --schema=./prisma/schema.prisma --no-hints"
   },
   "dependencies": {
     "@arcjet/next": "1.0.0-beta.7",
