--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "migrate": "cd packages/database && pnpm prisma format && pnpm prisma generate && pnpm prisma db push",
     "clean": "git clean -xdf node_modules",
     "install:retry": "pnpm install --frozen-lockfile --network-timeout 300000 || pnpm install --frozen-lockfile --network-timeout 300000 || pnpm install --frozen-lockfile --network-timeout 300000",
-    "postinstall": "cd packages/database && pnpm prisma generate --schema=./prisma/schema.prisma"
+    "postinstall": "cd packages/database && pnpm prisma generate --schema=./prisma/schema.prisma --no-hints"
   },
   "devDependencies": {
     "@auto-it/first-time-contributor": "^11.3.0",
