--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -27,5 +27,8 @@
     "bufferutil": "^4.0.9",
     "prisma": "6.4.1",
     "typescript": "^5.8.3"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
