--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,10 @@
     "autoAlias": false
   },
   "buildCommand": "chmod +x scripts/vercel-build.sh && ./scripts/vercel-build.sh",
-  "installCommand": "pnpm install"
+  "installCommand": "pnpm install",
+  "functions": {
+    "packages/database/**/*.ts": {
+      "includeFiles": "packages/database/prisma/schema.prisma"
+    }
+  }
 }
