--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ STRIPE_TRAVIRA_PRICE_ID="price_..."
 
 # SendGrid Configuration
 SENDGRID_API_KEY="SG...."
-SENDGRID_FROM_EMAIL="deals@travira.net"
+SENDGRID_FROM_EMAIL="deals@travira.org"
 
 # App Configuration
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
