--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "@t3-oss/env-nextjs": "^0.13.4",
     "amadeus": "^11.0.0",
     "clsx": "^2.1.1",
+    "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
     "fumadocs-core": "^15.4.0",
